# flimflam

./: .hgignore
firmware/: Makefile  main.c
software/: Main.hs  flimflam.cabal  notes.txt  stack.yaml
software/FlimFlam/: Access.hs  Communication.hs  Controller.hs  Device.hs  DeviceInformation.hs  Exception.hs  FirmwareCommand.hs  Memory.hs  Paging.hs  Segment.hs
software/FlimFlam/Devices/: ATmega328.hs
