name:                flimflam
version:             0.1
synopsis:            boot loader utility
homepage:            https://bitbucket.org/brunnerj/flimflam
license:             GPL-3
license-file:        LICENSE
author:              Julian Brunner
maintainer:          julianbrunner@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.10

executable flimflam
  main-is:             Main.hs
  build-depends:       base, bytestring, binary, linca, ftdihs
  ghc-options:         -Wall -fno-warn-tabs -fno-warn-type-defaults -fno-warn-name-shadowing
  default-language:    Haskell2010
