name:                flimflam
version:             0.1
synopsis:            boot loader utility
homepage:            https://bitbucket.org/brunnerj/flimflam
license:             GPL-3
license-file:        LICENSE
author:              Julian Brunner
maintainer:          julianbrunner@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.10

executable flimflam
  default-language:    Haskell2010
  build-depends:       base >= 4.8, bytestring >= 0.10, binary >= 0.7, linca >= 0.3, ftdihs >= 0.2
  ghc-options:         -Wall -fno-warn-tabs -fno-warn-name-shadowing -dynamic
  main-is:             Main.hs
